--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -1,100 +1,57 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Create Post</title>
 
-    <link rel="stylesheet" th:href="@{asset/css/styles/nav.css}">
-    <link rel="stylesheet" th:href="@{asset/css/styles/footer.css}">
-    <link rel="stylesheet" th:href="@{asset/css/media-query/footer.css}">
-    <link rel="stylesheet" th:href="@{asset/css/media-query/nav.css}">
-    <link rel="stylesheet" th:href="@{asset/css/media-query/style.css}">
-    <link rel="stylesheet" th:href="@{asset/css/styles/post.css}">
-    <link rel="stylesheet" th:href="@{asset/css/media-query/post.css}">
-    <link rel="stylesheet" th:href="@{asset/css/styles/create.css}">
-    <script src="https://kit.fontawesome.com/e2052a1ca7.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" th:href="@{/asset/css/styles/nav.css}">
+    <link rel="stylesheet" th:href="@{/asset/css/styles/footer.css}">
+    <link rel="stylesheet" th:href="@{/asset/css/media-query/footer.css}">
+    <link rel="stylesheet" th:href="@{/asset/css/media-query/nav.css}">
+    <link rel="stylesheet" th:href="@{/asset/css/media-query/style.css}">
+    <link rel="stylesheet" th:href="@{/asset/css/styles/post.css}">
+    <link rel="stylesheet" th:href="@{/asset/css/media-query/post.css}">
+    <link rel="stylesheet" th:href="@{/asset/css/styles/create.css}">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 
 <body>
 
-        <!-- Navigation   -->
-     <nav>
-        <div class="logo">
-            <a href="/index.html">
-                <h1>PentaBlog</h1>
-            </a>
-            <div class="toggle">
-                <button>
-                    <i class="fas fa-bars"></i>
-                </button>
-            </div>
-        </div>
+<nav th:insert="fragments.html :: topnav"></nav>
 
-        <ul class="links">
-            <li><a href="/index.html">home</a></li>
-            <li><a href="./create.html">post</a></li>
-            <li><a href="./register.html">register</a></li>
-        </ul>
-    </nav>
-    <!-- Navigation end   -->
+<!--Form-->
+<form th:action="@{/posts/save}" method="post" th:object="${postDto}" enctype="multipart/form-data">
+    <h1>Create a blog post</h1>
 
-
-     <!--Form-->
-     <form action="/posts/save" method="post" th:object="${post}" enctype="multipart/form-data">
-        <h2>create a blog post</h2>
-         <div class="mb-3">
-             <label for="formFile" class="form-label">Cover Image</label>
+    <div class="col-12">
+        <label for="formFile" class="form-label">Cover Image</label>
         <input class="form-control" th:field="*{imageFile}" type="file" id="formFile">
-         </div>
-         <label for="text"></label>
-        <input type="text" name="text" id="text" th:field="*{title}" placeholder="Enter your post title">
-         <label for="message"></label>
-        <textarea name="message" id="message" th:field="*{content}" cols="30" rows="10" placeholder="Post content here..."></textarea>
-        <input type="submit" value="publish post">
-    </form> 
-<!-- Form
-  
-        <Footer -->
-        <footer>
-            <div class="footer-flex">
-                <div class="footer-item studio">
-                    <h3>PentaBlog Studio</h3>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                        ut
-                        labore et dolore magna aliquyam erat, sed diam voluptua.</p>
-                    <p>Copyright © 2021 Your Company - Design: Whalewalker </p>
-                </div>
-                <div class="footer-item">
-                    <h3>Talk to us</h3>
-                    <p> 312 Delicious Street, San Francisco, CA 10880</p>
-                    <p>09075617573</p>
-                    <p>ohida@gmail.com</p>
-                </div>
-            </div>
+    </div>
 
-            <div class="media">
-                <button>
-                    <a href="#" class="fa fa-facebook"></a>
-                </button>
-                <button><a href="#" class="fa fa-twitter"></a></button>
-                <button>
-                    <a href="#" class="fa fa-google-plus"></a>
-                </button>
-                <button><a href="#" class="fa fa-dribbble"></a></button>
-                <button><a href="#" class="fa fa-linkedin"></a></button>
-            </div>
-        </footer>
-        <!-- Footer -->
+    <div th:if="${error}" class="alert alert-danger" role="alert">
+        <span th:text="${errorMessage}"></span>
+    </div>
 
+    <label for="text" class="form-label"></label>
+    <input type="text" name="text" id="text" th:field="*{title}" placeholder="Enter Post Title">
 
-    <!-- Navigation   -->
-    
+    <label for="message" class="form-label"></label>
+    <textarea name="message" id="message" th:field="*{content}" cols="30" rows="10" placeholder="Post content here..."></textarea>
 
-    <!-- Scripts -->
-    <script src="../scripts/app.js"></script>
+    <input type="submit" value="Publish post">
+</form>
+<!-- Form -->
+
+<footer th:insert="fragments.html :: footer"></footer>
+
+<!-- Scripts -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/e2052a1ca7.js" crossorigin="anonymous"></script>
+<script src="../scripts/app.js"></script>
 </body>
 
 </html>
