--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
-    <title>PentaBlog</title>
+    <title>Title</title>
+
     <link rel="stylesheet" th:href="@{asset/css/styles/style.css}">
     <link rel="stylesheet" th:href="@{asset/css/styles/nav.css}">
     <link rel="stylesheet" th:href="@{asset/css/styles/footer.css}">
@@ -18,33 +19,13 @@
 </head>
 
 <body>
-    <div class="header">
-    <nav>
-        <div class="logo">
-            <a href="/index.html">
-                <h1>PentaBlog</h1>
-            </a>
-            <div class="toggle">
-                <a href="">
+<div class="header">
 
-                </a>
-                <button>
-                    <i class="fas fa-bars"></i>
-                </button>
-            </div>
-        </div>
-
-        <ul class="links">
-            <li><a href="/allPost">home</a></li>
-            <li><a href="/createPost">post</a></li>
-<!--            <li><a href="./asset/pages/register.html">register</a></li>-->
-        </ul>
-    </nav>
-    <!-- Navigation end   -->
+    <nav th:insert="fragments.html :: topnav"></nav>
 
     <!-- Header section -->
     <header id="back-top">
-        <h1>Hello! This is PentaBlog.</h1>
+        <h1>Nwanne! Nno oo n'abia na PentaBlog.</h1>
         <div class="flag">
             <p>The </p>
             <img src="./asset/images/amazone.png">
@@ -58,202 +39,49 @@
     <!-- Header section end -->
 </div>
 
-    <!--    Blog post-->
-    <div id="blog" class="blog-post-container">
-        <div class="blog-post">
-            <a href="./asset/pages/post.html" class="img-container">
-                <img src="asset/images/blog-image1.jpg" alt="blog-img">
+<!--    Blog post-->
+<div id="blog" class="blog-post-container">
+
+    <div class="blog-post" th:each="post : ${postList}">
+        <a href="./asset/pages/post.html" class="img-container">
+            <!--                <img th:src="${post.coverImageUrl == null} ? '../static/asset/images/author-image1.jpg' : ${post.coverImageUrl}" alt="blog-img">-->
+            <img th:src="${post.coverImageUrl}" alt="blog-img">
+        </a>
+        <a href="./asset/pages/post.html" class="post-title" th:text="${post.title}"></a>
+        <div class="blog-post-detail">
+            <a class="user-detail">
+                <img src="asset/images/author-image1.jpg" class="user-profile">
+                <a href="" class="user-name">Jen Lopez</a>
             </a>
-            <a href="./asset/pages/post.html" class="post-title">We Help You Create Perfect Modern Design</a>
-            <div class="blog-post-detail">
-                <a class="user-detail">
-                    <img src="asset/images/author-image1.jpg" class="user-profile">
-                    <a href="" class="user-name">Jen Lopez</a>
-                </a>
 
-                <p class="date-published"> July 22, 2017</p>
+            <p class="date-published" th:text="${post.dateCreated}"></p>
 
-                <a href="" class="actions">
-                    <p><i class="far fa-comment"></i></p>
-                    <p><span class="comment-count">35</span> Comments</p>
-                </a>
-            </div>
-            <div class="post-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur.</p>
-            </div>
-            <a href="/asset/pages/post.html">
-                <button class="view-post">
-                    continue reading
-                </button>
+            <a href="" class="actions">
+                <p><i class="far fa-comment"></i></p>
+                <p><span class="comment-count">35</span> Comments</p>
             </a>
         </div>
-        <div class="diff"></div>
-        <div class="blog-post">
-            <a href="./asset/pages/post.html" class="img-container">
-                <img src="asset/images/blog-image1.jpg" alt="blog-img">
-            </a>
-            <a href="./asset/pages/post.html" class="post-title">We Help You Create Perfect Modern Design</a>
-            <div class="blog-post-detail">
-                <a class="user-detail">
-                    <img src="asset/images/author-image1.jpg" class="user-profile">
-                    <a href="" class="user-name">Jen Lopez</a>
-                </a>
-
-                <p class="date-published"> July 22, 2017</p>
-
-                <a href="" class="actions">
-                    <p><i class="far fa-comment"></i></p>
-                    <p><span class="comment-count">35</span> Comments</p>
-                </a>
-            </div>
-            <div class="post-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur.</p>
-            </div>
-            <a href="/asset/pages/post.html">
-                <button class="view-post">
-                    continue reading
-                </button>
-            </a>
+        <div class="post-content">
+            <p th:text="${post.content}"></p>
         </div>
-        <div class="diff"></div>
-        <div class="blog-post">
-            <a href="./asset/pages/post.html" class="img-container">
-                <img src="asset/images/blog-image1.jpg" alt="blog-img">
-            </a>
-            <a href="./asset/pages/post.html" class="post-title">We Help You Create Perfect Modern Design</a>
-            <div class="blog-post-detail">
-                <a class="user-detail">
-                    <img src="asset/images/author-image1.jpg" class="user-profile">
-                    <a href="" class="user-name">Jen Lopez</a>
-                </a>
-
-                <p class="date-published"> July 22, 2017</p>
-
-                <a href="" class="actions">
-                    <p><i class="far fa-comment"></i></p>
-                    <p><span class="comment-count">35</span> Comments</p>
-                </a>
-            </div>
-            <div class="post-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur.</p>
-            </div>
-            <a href="/asset/pages/post.html">
-                <button class="view-post">
-                    continue reading
-                </button>
-            </a>
-        </div>
-        <diiv class="diff"></diiv>
-        <div class="blog-post">
-            <a href="./asset/pages/post.html" class="img-container">
-                <img src="asset/images/blog-image1.jpg" alt="blog-img">
-            </a>
-            <a href="./asset/pages/post.html" class="post-title">We Help You Create Perfect Modern Design</a>
-            <div class="blog-post-detail">
-                <a class="user-detail">
-                    <img src="asset/images/author-image1.jpg" class="user-profile">
-                    <a href="" class="user-name">Jen Lopez</a>
-                </a>
-
-                <p class="date-published"> July 22, 2017</p>
-
-                <a href="" class="actions">
-                    <p><i class="far fa-comment"></i></p>
-                    <p><span class="comment-count">35</span> Comments</p>
-                </a>
-            </div>
-            <div class="post-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur.</p>
-            </div>
-            <a href="/asset/pages/post.html">
-                <button class="view-post">
-                    continue reading
-                </button>
-            </a>
-        </div>
-        <div class="diff"></div>
-        <div class="blog-post">
-            <a href="./asset/pages/post.html" class="img-container">
-                <img src="asset/images/blog-image1.jpg" alt="blog-img">
-            </a>
-            <a href="./asset/pages/post.html" class="post-title">We Help You Create Perfect Modern Design</a>
-            <div class="blog-post-detail">
-                <a class="user-detail">
-                    <img src="asset/images/author-image1.jpg" class="user-profile">
-                    <a href="" class="user-name">Jen Lopez</a>
-                </a>
-
-                <p class="date-published"> July 22, 2017</p>
-
-                <a href="" class="actions">
-                    <p><i class="far fa-comment"></i></p>
-                    <p><span class="comment-count">35</span> Comments</p>
-                </a>
-            </div>
-            <div class="post-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur.</p>
-            </div>
-            <a href="/asset/pages/post.html">
-                <button class="view-post">
-                    continue reading
-                </button>
-            </a>
-
-        </div>
-
+        <a href="/asset/pages/post.html">
+            <button class="view-post">
+                continue reading
+            </button>
+        </a>
     </div>
-    <!--   Blog post end-->
 
-    <!-- Footer -->
-    <footer>
-        <div class="footer-flex">
-            <div class="footer-item studio">
-                <h3>PentaBlog Studio</h3>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua.</p>
-                <p>Copyright © 2021 Your Company - Design: Whalewalker </p>
-            </div>
-            <div class="footer-item">
-                <h3>Talk to us</h3>
-                <p> 312 Delicious Street, San Francisco, CA 10880</p>
-                <p>09075617573</p>
-                <p>ohida@gmail.com</p>
-            </div>
-        </div>
+    <div class="diff"></div>
 
-        <div class="media">
-            <button>
-                <a href="#" class="fa fa-facebook"></a>
-            </button>
-            <button><a href="#" class="fa fa-twitter"></a></button>
-            <button>
-                <a href="#" class="fa fa-google-plus"></a>
-            </button>
-            <button><a href="#" class="fa fa-dribbble"></a></button>
-            <button><a href="#" class="fa fa-linkedin"></a></button>
-        </div>
-    </footer>
-    <!-- Footer -->
+</div>
+<!--   Blog post end-->
 
-    <a href="#back-top" class="go-top" style="display: inline;"><i class="fa fa-angle-up"></i></a>
+<footer th:insert="fragments.html :: footer"></footer>
 
-    <!-- Scripts -->
-    <script src="asset/scripts/app.js"></script>
+<a href="#back-top" class="go-top" style="display: inline;"><i class="fa fa-angle-up"></i></a>
+
+<!-- Scripts -->
+<script src="asset/scripts/app.js"></script>
 </body>
 
 </html>
