--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -18,73 +18,70 @@
 </head>
 
 <body>
-    
+<!-- Navigation   -->
+<nav>
+    <div class="logo">
+        <a href="/index.html">
+            <h1>PentaBlog</h1>
+        </a>
+        <div class="toggle">
+            <button>
+                <i class="fas fa-bars"></i>
+            </button>
+        </div>
+    </div>
 
+    <ul class="links">
+        <li><a href="/index.html">home</a></li>
+        <li><a href="./post.html">post</a></li>
+        <li><a href="#">galley</a></li>
+        <li><a href="./register.html">register</a></li>
+    </ul>
+</nav>
+<!-- Navigation end   -->
 
+<!-- Post Container -->
+<div class="post-header">
+    <h1>We Help You Create Perfect Modern Design</h1>
+</div>
+<!-- Post Container end -->
 
-    <!-- Navigation   -->
-    <nav>
-        <div class="logo">
-            <a href="/index.html">
-                <h1>PentaBlog</h1>
+<!-- Post -->
+
+<div class="blog-post-container">
+    <div class="blog-post">
+        <a href="#" class="post-title">We Help You Create Perfect Modern Design</a>
+        <div class="blog-post-detail">
+            <a class="user-detail">
+                <img src="../images/author-image1.jpg" class="user-profile">
+                <a href="" class="user-name">Jen Lopez</a>
             </a>
-            <div class="toggle">
-                <button>
-                    <i class="fas fa-bars"></i>
-                </button>
-            </div>
+
+            <p class="date-published"> July 22, 2017</p>
+
+            <a href="" class="actions">
+                <p><i class="far fa-comment"></i></p>
+                <p><span class="comment-count">35</span> Comments</p>
+            </a>
+        </div>
+        <div class="post-content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur.</p>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur.</p>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur.</p>
         </div>
 
-        <ul class="links">
-            <li><a href="/index.html">home</a></li>
-            <li><a href="./create.html">post</a></li>
-            <li><a href="./register.html">register</a></li>
-        </ul>
-    </nav>
-    <!-- Navigation end   -->
-
-    <!-- Post Container -->
-    <div class="post-header">
-        <h1>We Help You Create Perfect Modern Design</h1>
-    </div>
-    <!-- Post Container end -->
-
-    <!-- Post -->
-
-    <div class="blog-post-container">
-        <div class="blog-post">
-            <a href="#" class="post-title">We Help You Create Perfect Modern Design</a>
-            <div class="blog-post-detail">
-                <a class="user-detail">
-                    <img src="../images/author-image1.jpg" class="user-profile">
-                    <a href="" class="user-name">Jen Lopez</a>
-                </a>
-
-                <p class="date-published"> July 22, 2017</p>
-
-                <a href="" class="actions">
-                    <p><i class="far fa-comment"></i></p>
-                    <p><span class="comment-count">35</span> Comments</p>
-                </a>
-            </div>
-            <div class="post-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur.</p>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur.</p>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur.</p>
-            </div>
-
-            <!-- Comment -->
+        <!-- Comment -->
         <div class="comment-container">
             <div class="diff"></div>
             <h2>Comments</h2>
@@ -92,7 +89,7 @@
             <div class="comments">
                 <div class="commentator">
                     <img src="../images/comment-image1.jpg" alt="commentator" class="commentator-img"/>
-                    
+
                     <div class="commentator-detail">
                         <h3 class="name">David Jones</h3>
                         <p class="comment-date">3 days ago</p>
@@ -104,7 +101,7 @@
 
                 <div class="commentator">
                     <img src="../images/comment-image1.jpg" alt="commentator" class="commentator-img"/>
-                    
+
                     <div class="commentator-detail">
                         <h3 class="name">David Jones</h3>
                         <p class="comment-date">3 days ago</p>
@@ -116,7 +113,7 @@
 
                 <div class="commentator">
                     <img src="../images/comment-image1.jpg" alt="commentator" class="commentator-img"/>
-                    
+
                     <div class="commentator-detail">
                         <h3 class="name">David Jones</h3>
                         <p class="comment-date">3 days ago</p>
@@ -128,7 +125,7 @@
 
                 <div class="commentator">
                     <img src="../images/comment-image1.jpg" alt="commentator" class="commentator-img"/>
-                    
+
                     <div class="commentator-detail">
                         <h3 class="name">David Jones</h3>
                         <p class="comment-date">3 days ago</p>
@@ -140,7 +137,7 @@
             </div>
             <div class="diff"></div>
 
-        <!--Form-->
+            <!--Form-->
             <form action="">
                 <h2>Leave a Comment</h2>
 
@@ -149,48 +146,49 @@
                 <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
                 <input type="submit" value="post your comment">
             </form>
-        <!-- Form-->
+            <!-- Form-->
         </div>
         <!-- Comment end-->
 
+    </div>
+    <!-- Post end -->
+
+
+    <!-- Footer -->
+    <footer>
+        <div class="footer-flex">
+            <div class="footer-item studio">
+                <h3>PentaBlog Studio</h3>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+                    ut
+                    labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+                <p>Copyright © 2021 Your Company - Design: Whalewalker </p>
+            </div>
+            <div class="footer-item">
+                <h3>Talk to us</h3>
+                <p> 312 Delicious Street, San Francisco, CA 10880</p>
+                <p>09075617573</p>
+                <p>ohida@gmail.com</p>
+            </div>
         </div>
-        <!-- Post end -->
 
-        
-        <!-- Footer -->
-        <footer>
-            <div class="footer-flex">
-                <div class="footer-item studio">
-                    <h3>PentaBlog Studio</h3>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                        ut
-                        labore et dolore magna aliquyam erat, sed diam voluptua.</p>
-                        <p>Copyright © 2021 Your Company - Design: Whalewalker </p>
-                    </div>
-                    <div class="footer-item">
-                        <h3>Talk to us</h3>
-                        <p> 312 Delicious Street, San Francisco, CA 10880</p>
-                        <p>09075617573</p>
-                        <p>ohida@gmail.com</p>
-                    </div>
-            </div>
+        <div class="media">
+            <button>
+                <a href="#" class="fa fa-facebook"></a>
+            </button>
+            <button><a href="#" class="fa fa-twitter"></a></button>
+            <button>
+                <a href="#" class="fa fa-google-plus"></a>
+            </button>
+            <button><a href="#" class="fa fa-dribbble"></a></button>
+            <button><a href="#" class="fa fa-linkedin"></a></button>
+        </div>
+    </footer>
+    <!-- Footer -->
 
-            <div class="media">
-                <button>
-                    <a href="#" class="fa fa-facebook"></a>
-                </button>
-                <button><a href="#" class="fa fa-twitter"></a></button>
-                <button>
-                    <a href="#" class="fa fa-google-plus"></a>
-                </button>
-                <button><a href="#" class="fa fa-dribbble"></a></button>
-                <button><a href="#" class="fa fa-linkedin"></a></button>
-            </div>
-        </footer>
-        <!-- Footer -->
-
-        <!-- Scripts -->
-        <script src="../scripts/app.js"></script>
+    <!-- Scripts -->
+    <script src="../scripts/app.js"></script>
 </body>
 
 </html>
+©
